Revert "update contact info"
This reverts commit 5cfd9bc9033e4cb87f0e68a0e0f3ff082cffb221.

--- a/src/app/Components/Shared/footer/footer.component.css
+++ b/src/app/Components/Shared/footer/footer.component.css
@@ -1,5 +1,5 @@
 /* footer */
-.footer {
+#footer {
   position: relative !important;
   top: 0 !important;
   width: 100%;
@@ -57,7 +57,7 @@
 }
 
 @media (max-width: 500px) {
-  .footer #contact p:before {
+  #footer #contact p:before {
     width: 75%;
   }
 }
